--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
         <button onclick="showPopup();">Launch Popup</button>
         <button onclick="sendData();">Send</button>
-        <button onclick="sendData2();">Send</button>
+        <button onclick="sendData2();">Send2</button>
 
         <h1>Links</h1>
         <ul>
@@ -111,16 +111,6 @@
         // Init TWA
         Telegram.WebApp.ready();
 
-        dateTimeControlRangStart = document.getElementById("date-time-range-start");
-        dateTimeControlRangeEnd = document.getElementById("date-time-range-end");
-        const dateNow = new Date();
-        dateTimeControlRangStart.max = dateNow.toISOString().substring(0, 16);
-        dateTimeControlRangeEnd.max = dateNow.toISOString().substring(0, 16);
-        dateTimeControlRangeEnd.value = dateNow.toISOString().substring(0, 16);
-        defaultDate = new Date();
-        defaultDate.setTime(dateNow.getTime() - 2 * 3600 * 1000)
-        dateTimeControlRangStart.value = defaultDate.toISOString().substring(0, 16);
-
         // Event occurs whenever theme settings are changed in the user's Telegram app (including switching to night mode).
         Telegram.WebApp.onEvent('themeChanged', function() {
             document.documentElement.className = Telegram.WebApp.colorScheme;
@@ -132,9 +122,9 @@
         });
         Telegram.WebApp.MainButton.onClick(function () {
             Telegram.WebApp.showAlert('Main Button was clicked')
-            const data =  JSON.stringify({ "start": document.getElementById("date-time-range-start").value,
-                                           "end": document.getElementById("date-time-range-end").value})
-            Telegram.WebApp.sendData(data);
+            //const data =  JSON.stringify({ "start": document.getElementById("date-time-range-start").value,
+            //                               "end": document.getElementById("date-time-range-end").value})
+            //Telegram.WebApp.sendData(data);
         });	
         Telegram.WebApp.MainButton.show();
 
@@ -173,13 +163,14 @@
         }
 
         function sendData() {
-            const data =  JSON.stringify({ "start": document.getElementById("date-time-range-start").value,
-                                           "end": document.getElementById("date-time-range-end").value})
-            Telegram.WebApp.sendData(data);
+            //const data =  JSON.stringify({ "start": document.getElementById("date-time-range-start").value,
+            //                               "end": document.getElementById("date-time-range-end").value})
+            //Telegram.WebApp.sendData(data);
+            Telegram.WebApp.sendData(["a", "b"]);
         }
 
         function sendData2() {
-            var data = document.getElementById("date-time-range-start").value + ' OH OH je je!'
+            var data = document.getElementById('date-time-range-start') + ' OH OH je je!'
             Telegram.WebApp.sendData();
         }
 
