--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 
         function sendData2() {
             var data = document.getElementById('abcde') + ' OH OH je je!'
-            Telegram.WebApp.sendData();
+            console.log(data)
+            Telegram.WebApp.sendData(data);
         }
         
         // Init TWA
@@ -173,8 +174,6 @@
             var expandEl = document.querySelector('#viewport-params-expand');
             expandEl.innerText = 'Is Expanded: ' + (Telegram.WebApp.isExpanded ? 'true' : 'false');
         }
-
-        Telegram.WebApp.setHeaderColor('secondary_bg_color');
 
         setViewportData();
         Telegram.WebApp.onEvent('viewportChanged', setViewportData);
