--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
         dateTimeControlRangStart.value = defaultDate.toISOString().substring(0, 16);
         
         function sendData() {
-            //const data =  JSON.stringify({ "start": document.getElementById("date-time-range-start").value,
-            //                               "end": document.getElementById("date-time-range-end").value})
-            //Telegram.WebApp.sendData(data);
-            Telegram.WebApp.sendData('["a", "b"]');
+            const data =  JSON.stringify({ "start": document.getElementById("startdate").value,
+                                           "end": document.getElementById("enddate").value})
+            Telegram.WebApp.sendData(data);
         }
 
         function sendData2() {
@@ -152,9 +151,6 @@
         });
         Telegram.WebApp.MainButton.onClick(function () {
             Telegram.WebApp.showAlert('Main Button was clicked')
-            //const data =  JSON.stringify({ "start": document.getElementById("date-time-range-start").value,
-            //                               "end": document.getElementById("date-time-range-end").value})
-            //Telegram.WebApp.sendData(data);
         });	
         Telegram.WebApp.MainButton.show();
 
